# rui

./: Cargo.toml  shell.nix
examples/: calc.rs  canvas.rs  gallery.rs  lens.rs  nested.rs  shapes.rs  slider.rs  text_layout.rs  zstack.rs
src/: align.rs  binding.rs  context.rs  lib.rs  modifiers.rs  paint.rs  region.rs  renderer.rs  view.rs  winit_event_loop.rs
src/renderers/: mod.rs  renderer.rs  vger_renderer.rs
src/views/: anim.rs  anyview.rs  background.rs  button.rs  canvas.rs  clip.rs  command.rs  cond.rs  drag.rs  emptyview.rs  env.rs  flex.rs  focus.rs  geom.rs  handle.rs  hover.rs  key.rs  knob.rs  list.rs  map.rs  modview.rs  offset.rs  padding.rs  role.rs  shapes.rs  size.rs  slider.rs  spacer.rs  stack.rs  state.rs  tap.rs  text.rs  text_editor.rs  toggle.rs  window.rs
