[workspace]
resolver = "2" # What does this do?

[package]
name = "rui"
description = "Experimental Declarative UI library"
version = "0.6.1"
license = "MIT"
readme = "README.md"
authors = ["Taylor Holliday <taylor@audulus.com>"]
keywords = ["ui", "gui", "declarative"]
categories = ["gui"]
repository = "https://github.com/audulus/rui"
edition = "2018"
exclude = [ "screenshots/*" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [ "winit" ]

[dependencies]
euclid = "0.22.7"
wgpu = "0.18.0"
futures = "0.3"
accesskit = "0.11.0"
lazy_static = "1.4.0"
winit = { version = "0.28.1", optional = true }
vger = { path="../vger-rs" }
anyhow = "1.0.69"
raw-window-handle = "0.5.1"
cosmic-text = { git = "https://github.com/lapce/cosmic-text", rev = "25f260eced296296ca22d22a04cbb3026f5fe2a2" }
image = { version = "0.24", features = ["jpeg", "png"] }

# Seems we can't publish to crates.io with this dependency.
# baseview = { git = "https://github.com/RustAudio/baseview", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.76"
web-sys = { version = "^0.3.61", features = ["Location"] }
log = "0.4"
console_log = "0.1.2"
console_error_panic_hook = "0.1.6"
